...
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_isi_message"
        android:background="@drawable/bg_item_bubble_message"
        android:paddingBottom="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="Type here . ."
        android:selectAllOnFocus="true"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/fab_message_kirim"
        android:layout_toLeftOf="@+id/fab_message_kirim"
        android:layout_alignParentLeft="true"
        android:elevation="3dp"
        fontPath="font/sanfran_reg.otf"/>

    <android.support.design.widget.FloatingActionButton
...
